log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Fri May 15 06:48:23 PM UTC 2026: 
 graph.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getEdges’:
graph.c:47:5: error: expected identifier or ‘(’ before ‘return’
   47 |     return map_search(g->adjacencyMap, (void *) label);
      |     ^~~~~~
graph.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
d6ccab9
Fri May 15 06:48:46 PM UTC 2026: 
 graph.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getEdges’:
graph.c:46:12: error: returning ‘MapPair *’ from a function with incompatible return type ‘List *’ [-Wincompatible-pointer-types]
   46 |     return map_search(g->adjacencyMap, (void *) label);
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
29b3148
Fri May 15 06:49:05 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
c40d9d4
Fri May 15 06:52:33 PM UTC 2026: 
 graph.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:54:12: error: expected ‘(’ before ‘is_equal_string’
   54 |         if is_equal_string(aux->target, label2) return aux->weight;
      |            ^~~~~~~~~~~~~~~
      |            (
graph.c:54:41: error: passing argument 2 of ‘is_equal_string’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   54 |         if is_equal_string(aux->target, label2) return aux->weight;
      |                                         ^~~~~~
graph.c:21:39: note: expected ‘void *’ but argument is of type ‘const char *’
   21 | int is_equal_string(void *key1, void *key2) {
      |                                 ~~~~~~^~~~
cc1: all warnings being treated as errors
c120e75
Fri May 15 06:53:38 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
50b98de
Fri May 15 06:57:49 PM UTC 2026: 
 graph.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:52:24: error: returning ‘void *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Wint-conversion]
   52 |     if (!edges) return NULL;
      |                        ^~~~
3bdf663
Fri May 15 06:58:02 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4749d99
